--- a/package.json
+++ b/package.json
@@ -40,9 +40,6 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.21",
-    "gh-pages": "^6.3.0",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.0.15"
+    "gh-pages": "^6.3.0"
   }
 }
