--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,50 +5,27 @@ on:
     branches:
       - main
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-# Allow only one concurrent deployment
-concurrency:
-  group: "pages"
-  cancel-in-progress: true
-
 jobs:
-  build-and-deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+  deploy:
     runs-on: ubuntu-latest
-    
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
       
-      - name: Set up Node.js
+      - name: Setup Node
         uses: actions/setup-node@v2
         with:
-          node-version: 16
-          cache: 'npm'
-      
+          node-version: '14'
+          
       - name: Install Dependencies
         run: npm ci || npm install
-      
+        
       - name: Build
         run: npm run build
         env:
-          CI: false # This prevents treating warnings as errors
-      
-      - name: Setup Pages
-        uses: actions/configure-pages@v2
-      
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
+          CI: false
+          
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          path: './build'
-      
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v1
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./build
